--- a/main.html
+++ b/main.html
@@ -4,9 +4,38 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table, th ,td{
+			border:1px solid black;
+		}
+		table {
+			background-color: yellow;
+		}
+	</style>
 </head>
 
 <body>
+	<table border="1px">
+		<caption>Student Details</caption>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
+		</tr>
+
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
